重构代码 创建CommandBuilder和ImageProcessor类